@@ -1,20 +1,15 @@
-package sia.tacocloud.controller;
+package sia.tacocloud;
 
+import jakarta.validation.Valid;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
 import org.springframework.validation.Errors;
 import org.springframework.web.bind.annotation.*;
-import sia.tacocloud.model.Ingredient;
-import sia.tacocloud.model.Ingredient.Type;
-import sia.tacocloud.model.Taco;
-import sia.tacocloud.model.TacoOrder;
-import sia.tacocloud.repository.IngredientRepository;
+import sia.tacocloud.Ingredient.Type;
 
-import javax.validation.Valid;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.stream.StreamSupport;
 
 @Slf4j
 @Controller
@@ -23,16 +18,19 @@ import java.util.stream.Collectors;
 public class DesignTacoController {
 
     private final IngredientRepository ingredientRepo;
-    @Autowired
-    public DesignTacoController(
-            IngredientRepository ingredientRepo) { this.ingredientRepo = ingredientRepo;
+
+    public DesignTacoController(IngredientRepository ingredientRepo) {
+        this.ingredientRepo = ingredientRepo;
     }
 
     @ModelAttribute
     public void addIngredientsToModel(Model model) {
-        Iterable<Ingredient> ingredients = ingredientRepo.findAll(); Type[] types = Ingredient.Type.values();
+        Iterable<Ingredient> ingredients = ingredientRepo.findAll();
+        List<Ingredient> ingredientList = StreamSupport.stream(ingredients.spliterator(), false)
+                .toList();
+        Type[] types = Ingredient.Type.values();
         for (Type type : types) {
-            model.addAttribute(type.toString().toLowerCase(), filterByType((List<Ingredient>) ingredients, type));
+            model.addAttribute(type.toString().toLowerCase(), filterByType(ingredientList, type));
         }
     }
 
@@ -67,6 +65,6 @@ public class DesignTacoController {
     private Iterable<Ingredient> filterByType(List<Ingredient> ingredients, Type type) {
         return ingredients.stream()
                 .filter(x -> x.getType().equals(type))
-                .collect(Collectors.toList());
+                .toList();
     }
 }
